Fix modals srolltop bug if input get focus (on mobile safari)

--- a/css/main.css
+++ b/css/main.css
@@ -493,6 +493,12 @@ button::-moz-focus-inner {
   display: block;
 }
 
+html, body {
+  -webkit-overflow-scrolling: touch !important;
+  overflow: auto !important;
+  height: 100% !important;
+}
+
 html.agmodal--lock-test {
   overflow-y: hidden !important;
 }
